CSS/responsive.css
/* tablet */
/* @media all and (max-width:768px) {
    nav {

        width: 100%;
        overflow: visible;
    }

    nav ul {
        width: 55%;
        display: flex;
        flex-direction: column;
        margin: 0;
        padding: 0;
        position: absolute;
        top: 0;
        right: 0;
        height: 80vh;
        background-color: rgba(123, 223, 242, 1);
        justify-content: start;
        transform: translateX(100%);
        transition: all .8s;
        opacity: 0;
    }

    nav ul li {
        margin-left: 0px;
        display: block;
        color: #ffff;
        margin-top: 40px;
    }

    nav ul.slide {
        opacity: 1;
        transform: translateX(0);
    }

    .toggle-menu {
        display: flex;
    }
} */
/* iphone x */
@media all and (max-width:768px) {

    /*  Header and Navbar */
    .navbar {
        padding: 10px 0;
        width: 100%;
        justify-content: center;
        color: violet
    }

    .navbar>a>h2 {
        font-size: 15px;
        margin: 0;
        margin: 10px 0 10px 20px;

    }

    nav {
        width: 100%;
        overflow: visible;

    }

    nav ul {
        width: 55%;
        display: flex;
        flex-direction: column;
        margin: 0;
        padding: 0;
        position: absolute;
        top: 0;
        right: 0;
        height: 110vh;
        background-color: rgba(123, 223, 242, 1);
        justify-content: start;
        transform: translateX(100%);
        transition: all .8s;
        opacity: 0;
        padding: 20px;
    }


    nav ul li {
        margin-left: 0px;
        display: block;
        color: #ffff;
        margin-top: 60px;
    }

    nav ul.slide {
        opacity: 1;
        transform: translateX(0);
    }

    .toggle-menu {
        display: flex;
    }

    .jumbotron {
        margin: 0;
        padding: 0 20px;
        margin-top: 70px;
        width: 100%;
        height: 400px;
    }


    .right {
        padding: 20px;
        width: 50%;
        float: left;
    }

    .right>h1 {
        font-size: 2em;
        line-height: 40px;
        margin: 0;
    }

    .right>p {
        width: 100%;
        margin: 0;
        margin-bottom: 30px;
        text-align: left;
    }

    .jumbotron button {
        height: 45px;
        background: #7BDFF2;
        border-radius: 10px;
        color: #ffff;
        font-weight: bold;
        font-size: 18px;
        cursor: pointer;
        border: 0px;

    }

    .left img {
        width: 100%;
        margin: auto;
    }

    .left {
        width: 50%;
        float: right;
    }

    /* what is covid */
    .covid19 {
        width: 100%;
        margin: 0;
        padding: 0;
        margin-bottom: 100px;
        height: 350px;
    }

    .container {
        width: 100%;
        padding: 20px;
    }

    .content-left {
        float: left;
        width: 50%;
    }

    .img-content img {
        width: 100%;
    }

    .content-right {
        float: right;
        width: 50%;
        text-align: justify;
        height: 300px;
        padding: 20px;
    }


    .txt-covid19 h1 {
        font-size: 1.5em;
        font-weight: bold;
        padding-top: 0px;
    }

    .txt-covid19 p {
        margin-top: 25px;
        font-size: 18px;
        color: #00000080;
        width: 100%;
    }

    .btn {
        background: #ff4f5a;
        border-radius: 10px;
        display: inline-block;
        text-align: center;
        color: white;
        font-size: 18px;
        font-weight: bold;
    }

    .learn-more {
        margin-top: 25px;
        padding: 12px 24px 12px 24px;
    }

    /* prevention section */
    .prevention {
        height: 350px;
        text-align: center;
        margin: 0;
        padding: 0;
        margin: 30px 0;
    }

    .prevention-container {
        flex-direction: row;
        padding: 20px;
        margin: 0;

    }

    .prevention>h2 {
        font-size: 2em;
        margin-bottom: 20px;
    }

    .we-do {
        width: 200px;
        height: 240px;
        margin: 0;
        margin: auto;
        margin-right: 20px;
    }

    .we-do img {
        width: 100%;
        margin: 0;
        margin-bottom: -20px;
    }

    /* symptomp section */
    .symptomps {
        margin-top: 100px;
        padding: 0;
        width: 100%;
        height: 400px;
    }

    .symptomp-container {
        width: 100%;
        margin-top: 20px;
        justify-content: start;
        padding: 0;
    }

    .symp-info {
        margin: auto;
        position: relative;
        width: 50%;
        height: 300px;
        padding: 10px 20px 0 20px;
    }

    .symp-img {
        width: 50%;
        margin: 0;
    }

    .dua {
        margin-left: 150px;
    }


    .empat {
        margin-left: 150px;
    }

    .we-feel {
        Width: 200px;
        Height: 45.05px;
        font-weight: bold;
        margin-bottom: 25px;
        font-size: 1.1em;
        padding: 10px 0 0 0;
    }

    /* footer */
    footer {
        height: 300px;
        margin: 0;
    }

    .container-footer {
        justify-content: space-between;
        background-color: #7bdff2;
        border-bottom: 2px solid white;
        padding: 40px 40px 0 40px;
    }

    .container-footer h3 {
        text-align: center;
    }

    .container-footer p {
        margin-top: 10px;
    }

    .about-us {
        width: 180px;
        text-align: justify;
    }

    .contact-us {
        margin-right: 0px;
        width: 236px;
        padding-bottom: 10px;
    }

    .subscribe {
        width: 155px;
        text-align: center;
    }

    .email {
        width: 155px;
        height: 45px;
    }

    .submit {
        margin: auto;
        text-align: center;
        margin-top: 20px;
    }
}
/* ... */

